test/e2e/test_data/customNetworkProvider/rollout_with_trafficrouting.yaml
  apiVersion: rollouts.kruise.io/v1alpha1
  kind: Rollout
  metadata:
    name: rollouts-demo
    annotations:
      rollouts.kruise.io/rolling-style: canary
  spec:
    disabled: false
    objectRef:
      workloadRef:
        apiVersion: apps/v1
        kind: Deployment
        name: echoserver
    strategy:
      canary:
        steps:
        - replicas: 1
          matches:
          - headers:
            - type: Exact
              name: user-agent
              value: pc
        - weight: 50
        trafficRoutings:
        - service: echoserver
          customNetworkRefs:
          - apiVersion: networking.istio.io/v1alpha3
            kind: VirtualService
            name: vs-demo
